# lazyfeed

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci_cd.yml  release.yml
migrations/: 20260624102308_create_feeds_and_entries.sql
src/: config.rs  constants.rs  lib.rs  models.rs
src/lazyfeed/: __main__.py  app.py  cli.py  config.py  config_template.toml  confirm_modal.py  db.py  decorators.py  errors.py  feeds.py  global.tcss  help_modal.md  help_modal.py  http_client.py  main.py  messages.py  models.py  news_list.py  opml_utils.py  repositories.py  settings.py  tabloid.py  test_feeds.py  tui.py  utils.py
src/lazyfeed/commands/: __init__.py  add_feed.py  delete_feed.py  export_feeds.py  import_feeds.py  list_feeds.py  open_config.py  start_tui.py  vacuum.py
src/lazyfeed/feeds/: fetch.py
src/lazyfeed/widgets/: __init__.py  custom_header.py  helpable.py  item_screen.py  item_table.py  items_table.py  rss_feed_tree.py  validators.py
src/lazyfeed/widgets/modals/: __init__.py  add_feed_modal.py  confirm_action_modal.py  edit_feed_modal.py  help_modal.py
src/lazyfeed/widgets/validators/: url.py
tests/: test_feeds.py  test_repositories.py  test_tui.py  test_validators.py
