[package]
name = "lazyfeed"
version = "0.1.0"
description = "A fast, modern, and simple RSS/Atom feed reader for the terminal."
authors = ["dnlzrgz <contact@dnlzrgz.com>"]
license = "MIT"
edition = "2024"

[dependencies]
ratatui = "0.30.2"
color-eyre = "0.6.5"
crossterm = "0.29.0"
sqlx = { version = "0.9.0", features = [
  "sqlite",
  "runtime-tokio",
  "migrate",
  "chrono",
] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
dirs = "6.0.0"
toml = "1.1.2"
dotenvy = "0.15.7"
chrono = "0.4.45"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
