[project]
name = "lazyfeed"
version = "0.1.36"
description = "lazyfeed is a fast, modern and simple terminal base RSS/Atom reader built using textual."
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "feedparser>=6.0.11",
  "rich>=13.8.1",
  "textual>=0.79.1",
  "sqlalchemy>=2.0.34",
  "click>=8.1.7",
  "pydantic-settings>=2.5.2",
  "sqids>=0.5.0",
  "aiohttp>=3.10.5",
  "rich-click>=1.8.3",
]

[project.scripts]
lazyfeed = "lazyfeed.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "commitizen>=3.29.0",
  "ruff>=0.6.4",
  "textual-dev>=1.6.1",
  "pytest-aiohttp>=1.0.5",
  "pytest-asyncio>=0.24.0",
  "pytest>=8.3.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
