[project]
name = "lazyfeed"
version = "0.4.6"
description = "lazyfeed is a fast and simple terminal base RSS/Atom reader built using textual."
authors = [{ name = "dnlzrgz", email = "contact@dnlzrgz.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "feedparser>=6.0.11",
  "rich>=13.8.1",
  "textual>=0.79.1",
  "sqlalchemy>=2.0.34",
  "pydantic-settings>=2.5.2",
  "aiohttp[speedups]>=3.10.5",
]

[project.urls]
Homepage = "https://dnlzrgz.com/projects/lazyfeed/"
Source = "https://github.com/dnlzrgz/lazyfeed"
Issues = "https://github.com/dnlzrgz/lazyfeed/issues"
Releases = "https://github.com/dnlzrgz/lazyfeed/releases"

[project.scripts]
lazyfeed = "lazyfeed:app.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "commitizen>=3.29.0",
  "ruff>=0.6.4",
  "textual-dev>=1.6.1",
  "pytest-aiohttp>=1.0.5",
  "pytest-asyncio>=0.24.0",
  "pytest>=8.3.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
